--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/x-date-pickers": "^7.12.0",
     "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.2",
+    "date-fns": "^3.6.0",
     "formik": "^2.4.6",
     "i18next": "^23.12.2",
     "i18next-browser-languagedetector": "^8.0.0",
